feature list component: setup

--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,10 @@
 {
   "require": {
-    "craftcms/cms": "3.1.20.1",
+    "craftcms/cms": "3.1.22",
     "craftcms/redactor": "2.3.2",
+    "dolphiq/sitemap": "1.0.9",
     "monachilada/craft-matrixtoolbar": "1.0.6",
-    "verbb/super-table": "2.1.16",
+    "verbb/super-table": "2.1.17",
     "vlucas/phpdotenv": "^2.4.0"
   },
   "autoload": {
