--- a/config/project.yaml
+++ b/config/project.yaml
@@ -1,4 +1,4 @@
-dateModified: 1557141828
+dateModified: 1557223531
 email:
   fromEmail: bo@cobiro.com
   fromName: Cobiro
@@ -2533,6 +2533,10 @@ plugins:
     edition: standard
     enabled: true
     schemaVersion: 1.0.2
+  fetch:
+    edition: standard
+    enabled: true
+    schemaVersion: 1.0.0
 sections:
   aebcc222-f778-4b0b-8456-c203042d4448:
     name: Pages
