--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,3 +35,24 @@ jobs:
 
       # run tests!
       - run: npm run build
+
+  deploy:
+    machine:
+      enabled: true
+    steps:
+      - run:
+          name: Deploy Over SSH
+          command: |
+            scp cobiro/readme.md $SSH_USER@$SSH_HOST:/path-to-put-files-on-server/
+
+workflows:
+  version: 2
+  build-and-deploy:
+    jobs:
+      - build
+      - deploy:
+          requires:
+            - build
+          filters:
+            branches:
+              only: development
