--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,7 @@ jobs:
       - run:
           name: Deploy Over SSH
           command: |
-            scp cobiro/readme.md $SSH_USER@$SSH_HOST:/path-to-put-files-on-server/
+            scp readme.md labcademy.dk@linux239.unoeuro.com:.
 
 workflows:
   version: 2
