--- a/web/.htaccess
+++ b/web/.htaccess
@@ -7,3 +7,5 @@
     RewriteCond %{REQUEST_URI} !^/(favicon\.ico|apple-touch-icon.*\.png)$ [NC]
     RewriteRule (.+) index.php?p=$1 [QSA,L]
 </IfModule>
+
+php_value max_input_vars 2000
