--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,11 +43,7 @@ jobs:
       - run:
           name: Deploy Over SSH
           command: |
-            scp readme.md $SSH_USER@$SSH_HOST:.
-      - run:
-          name: Login
-          command: |
-            $PASSWORD
+            scp readme.md $SSH_USER@$SSH_HOST:. | $PASSWORD
 
 workflows:
   version: 2
