--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,7 @@ jobs:
     steps:
       - run:
           name: Install expect command
-          command: apt-get install expect
+          command: sudo apt-get install expect
       - run:
           name: Deploy Over SSH
           command: |
