--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,7 +46,7 @@ jobs:
       - run:
           name: Deploy Over SSH
           command: |
-            expect -c 'spawn scp readme.md $SSH_USER@$SSH_HOST:.; expect "assword:"; send "$PASSWORD\r"; interact'
+            expect -c 'spawn scp readme.md $::env(SSH_USER)@$::env(SSH_HOST):.; expect "assword:"; send "$::env(PASSWORD)\r"; interact'
 
 workflows:
   version: 2
